css/style.css
/*App and Nav*/
html{
    overflow: -moz-scrollbars-vertical;
    overflow-y: scroll;
}
html, body{
    margin: 0px;
    background: white;
    /*font-family: "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;*/
    font-family: arial, sans-serif;
}

p{
    line-height: 125%;
}

div {
    display: block;
}

h1{
	font-size: 22px;
	font-weight: normal;
	margin: 0px 0px 10px 0px;
}

h2{
	font-size: 20px;
	font-weight: normal;
	margin: 0px 0px 10px 0px;
}

h3{
    font-size: 22px;
    font-weight: normal;
    margin: 0px 0px 10px 0px;
}

.top-margin{
    margin-top:25px;
}

hr{
    border-top: 1px solid darkgray;
    /*margin: 50px 0px;*/
}

button {width: 150px; height: 50px; cursor: pointer; color: whitesmoke;
    background: black; border: none; border-radius: 10px;
    padding: 10px;
    transition: .5s;}


button:hover{
    background: #333333;
}

button a{
    color: white;
    text-decoration: none;
}

section{
    max-width: 1200px;
    width: 75%;
    color: #222222;
}

#app {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: black;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;

}

.break {
    flex-basis: 100%;
    height: 0;
}

img {
    height: 40px;
}

.logo{
    display: flex;
    text-decoration: none;
}

:visited {
    color: whitesmoke;
}

.bar{
    display: flex;
    align-items: center;
    width: 100%;
    /*max-width: 1200px;*/
    /*padding: 0px 12.5%;*/
}

#usc{
    justify-content: center;
    text-align: right;
    background: #990000;
    height: 50px;
    z-index:6;
}

#usc img{
    height: 30px;
    padding: 10px 0px;
}

.usc {
    margin-right: 1%;
    color: #FFCC00;
}

#slab {
    justify-content: center;
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/slab/header.jpg");
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    z-index:6;
    width: 100%;
    /*background-attachment: fixed;*/
}

#slab h1{
    /*margin: 0px 10px 0px 0px;*/
    font-size: 40px;
}

.lab {
    color: white;
}

#slab a{
    padding: 25px 0px;
}

#nav {
    height: 55px;
    padding: 10px auto;
    align-items: center;
    justify-content: center;
    background: black;
    position: sticky;
    top: 0;
    left: 0;
    z-index:5;
}



/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: black;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    font-size: 13px;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a {color: white;}
.dropdown-content a:visited {color: white;}
.dropdown-content a:hover {background-color: #111111;}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {display: block;}

.dropdown:hover .dropbtn {}

.dropicon{
    padding-left: 10px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: 0.5s;
    background: transparent;
}
.icon{
    width: 100%;
    /*padding: 20px 0px;*/
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: 0.5s;
    background: transparent;
}

/*.icon:hover{*/
/*    background: black;*/
/*}*/

.stretch{
    display: flex;
    flex-grow: 1;
    justify-content: flex-start;
}

a {
	color: black;
	text-decoration: none;
	transition: .5s;
}

a:hover{
	color: #FFCC00;
}

a:visited {
	color: #FFFFFF;
}

#nav a.link {
    margin-right: 30px;
    font-size: 15px;}

a.link {
    color: white;
    text-decoration: none;
    position: relative;
    cursor: pointer;
    padding: 5px 0px;
    transition: color .5s;
}

a.link:hover{
    color: #FFCC00;
}

a.link.currentLink {
    color: #FFCC00;
}

.feature {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: flex-start;
}

.feature img{
    max-width: 250px;
    height: auto;
    margin: 10px 0px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

/* Front Page */
.soon {
    height: 400px;
}
.content{
	margin: 25px 0px 25px 0px;
    /*min-height: calc(100vh - 450px);*/
}

#carousel-bar{
    justify-content: center;
    align-items: flex-start;
}

#img-carousel{
    position: relative;
    overflow: hidden;
    text-align: center;
    width: 100%;
    height: calc((600 / 1100)*75vw);
    max-height: 656px;
    margin-top:25px;
}

.slide {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 100%;
    z-index: 2;
    background-position: center;
    background-size: 100% auto;
    background-repeat: no-repeat;
    /*background-attachment: fixed;*/
    transition: left 0s 0.75s;
}

.menu {
     position: absolute;
     left: 0;
     z-index: 4;
     width: 100%;
     bottom: 0;
 }

#img-carousel input{
    visibility: hidden;
}

.menu label {
    cursor: pointer;
    display: inline-block;
    width: 30px;
    height: 4px;
    background: #fff;
    opacity: 50%;
    /*border-radius: 50px;*/
    margin: 0 0.2em 1em;
}
.menu label:hover,
.menu label:focus {
    opacity: 100%;
}

[id^="slide"]:checked + .slide {
    left: 0;
    z-index: 3;
    transition: left 0.65s ease-out;
}

.slide-1 {
    background-image: url('../assets/featured/prosthesis.jpg');
}
.slide-2 {
    background-image: url('../assets/featured/lab.jpg');
}
.slide-3 {
    background-image: url('../assets/featured/kernels.jpg');
}

.content a:visited{
    color: #666666
}

.feature-text{
   width: calc(100% - (250px + 50px))
}

.feature-head{
    width: 250px;
}

.reverse{
    flex-wrap: wrap-reverse;
}

.margin-left{
    margin-left: 50px;
}

.margin-right{
    margin-right: 50px;
}

#menu-toggle{
    flex-grow: 1;
    color: white;
    display:none;
    text-align: center;
}


/* Research */

#research .feature{
    justify-content: flex-start;
    align-items: center;
    margin:25px 0px;
}
/* People */

#people-selector{
    display: flex;
    margin: 25px 0px 25px 0px;
    width: 100%;
    justify-content: center;
    align-items: center;
}

#people-selector button{
    /*width: 300px;*/
    flex-grow: 1;
    margin: 0px 25px;
}

#people .feature {
    margin-bottom: 50px;
}

#people hr {
    margin-top:0px;
    margin-bottom:25px;
}

.social {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    max-width: 250px;
}

.social a svg{
    fill: darkgray;
    transition: .5s;
}

.social a {
    position: relative;
    cursor: pointer;
    margin: 5px 10px 0px 0px;
    transition: .5s;
}

.social a:hover svg {
    fill: lightgray;
}

.social a:before {
    content: "";
    position: absolute;
    width: 0;
    height: 1px;
    bottom: 0;
    left: 0;
    background-color: white;
    visibility: hidden;
    transition: all 0.5s ease-in-out;
}

.social a:hover:before {
    visibility: visible;
    width: 100%;
}

/* Publications */
#publications p {
    font-size: 80%
}

.underheader{
    margin-top:0px;
    margin-bottom:10px;
}

/* Resources */

#resources .feature{
    align-items: stretch;
}

#resources .feature-head{
    padding-right:50px;
    width: 400px;
    min-height: 200px;
}


/* Hero */

#hero1{
    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../assets/hmp/HMP.jpg')
}
#hero2{
    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../assets/brain.gif')
}

.hero{
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
    height: calc(100vh - 75px);
    width: 100vw;
    display:table-cell;
    vertical-align: middle;
}

.left {
    text-align: left;
}

.center {
    text-align: center;
}

/*Footer*/

.footer-text{
    font-size: 12px;
}

#footer {
    display: flex;
    color: white;
    /*height: 150px;*/
    justify-content: center;
    align-items: center;
    margin: auto;
    background: #000000;
    padding: 10px 0px;
}

#footer section{
    display: flex;
    align-items: center;
}

#footer a {
	font-size: 90%;
	color: #FFFFFF;
}

#footer p{
    margin-top:5px;
}

#footer img{
    max-height:100px;
    max-width: 100%;
    width: auto;
    height: auto;


}

#footer-left{
    flex-grow: 2;
}

#footer-right{
    text-align: right;
    flex-grow: 1;
}


.unavailable{
    color: #777777;
    cursor: default;
    font-size: 12px;
}


@media (max-width: 800px) {

    .feature{
        justify-content: center;
    }

    #menu-toggle {
        margin:25px 0px 0px 0px;
        width: 100%;
        display: block;
    }

    .dropdown:hover .dropdown-content {display: none;}

    .dropicon {display:none}

    #nav section{
        width: 100%;
    }

    #links{
        z-index:3;
        position: relative;
        background: black;
        top: -205px; left: 0px;
        padding: 50px 12.5% 0px 12.5%;
        flex-wrap: wrap;
        justify-content: center;
        align-items: flex-start;
        align-content: center;
        transition: top 0.5s ease-in-out;
        -o-transition: top 0.5s ease-in-out;
        -ms-transition: top 0.5s ease-in-out;
        -moz-transition: top 0.5s ease-in-out;
        -webkit-transition: top 0.5s ease-in-out;
        flex-direction: column;
    }

    #links a.link {
        margin: 0px;
        font-size: 50px;}

    #research .feature-text, .feature-left{
        margin: 0px auto 0px auto;
        justify-content: center;
        align-items: center;
    }

    #resources .feature-text, .feature-left{
        margin: 0px auto 0px auto;
        justify-content: center;
        align-items: center;
    }

    .feature-text{
        max-width: 1200px;
        width: 75%;
        text-align: center;
    }
    .margin-left{
        margin-left: 0px;
    }
    .margin-right{
        margin-right: 0px;
    }
}

@media (max-width: 600px) {

    /*#nav {*/
    /*    background: red;*/
    /*}*/

    #slab h1 {
        font-size: 25px;
    }

    #links{
        top: -145px; left: 0px;
        padding: 75px 12.5% 0px 12.5%;
    }

    #links a.link {
        margin: 0px;
        font-size: 25px;}
}

